trying to get pytest to run in CI

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, lint, format
+envlist = py36, py37, lint, format, pytest
 
 [travis]
 python =
@@ -13,6 +13,10 @@ commands = invoke lint
 [testenv:format]
 basepython = python
 commands = invoke format --check
+
+[testenv:pytest]
+basepython = python
+commands = pytest -s -v
 
 [testenv]
 setenv =
