--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, lint, format, pytest
+envlist = py36, py37, lint, format
 
 [travis]
 python =
@@ -13,10 +13,6 @@ commands = invoke lint
 [testenv:format]
 basepython = python
 commands = invoke format --check
-
-[testenv:pytest]
-basepython = python
-commands = pytest -s -v
 
 [testenv]
 setenv =
